# juny

./: .gitignore  CHANGELOG.md  LICENSE  README.ko.md  README.md  biome.json  commitlint.config.cjs  mise.toml
.agent/rules/: GEMINI.md  build-guide.md  design-tokens-guide.md  i18n-guide.md  lint-format-guide.md  test-guide.md
.agent/skills/developer-workflow/: SKILL.md
.github/workflows/: deploy-api.yml  deploy-mobile.yml  deploy-web.yml  deploy-worker.yml  review.yml
.serena/: project.yml
.serena/memories/: code-style-conventions.md  suggested_commands.md  task-completion-checklist.md
apps/api/: .env.example  Dockerfile  docker-compose.infra.yml  openapi.json  pyproject.toml
apps/infra/: cdn.tf  compute.tf  iam.tf  locals.tf  terraform.tfvars.example  variables.tf
apps/mobile/: analysis_options.yaml  l10n.yaml  pubspec.yaml
apps/web/: .env.example  Dockerfile
apps/worker/: .env.example  pyproject.toml
apps/worker/src/: main.py
apps/worker/src/jobs/: __init__.py  base.py  data_cleanup.py  medication_reminder.py  notification_send.py  relation_inactive.py  wellness_aggregate.py  wellness_escalation.py
apps/worker/src/lib/: config.py  idempotency.py  retry.py  telemetry.py
apps/worker/src/routers/: pubsub.py  tasks.py
apps/worker/tests/: conftest.py  test_data_cleanup.py  test_health.py  test_idempotency.py  test_job_registry.py  test_medication_reminder.py  test_notification_send.py  test_placeholder.py  test_pubsub_router.py  test_relation_inactive.py  test_retry.py  test_tasks_router.py  test_telemetry.py  test_wellness_aggregate.py  test_wellness_escalation.py
docs/: AUTH.ko.md  AUTH.md  USAGE.ko.md  USAGE.md  WHY.ko.md  WHY.md
(+278 files in other folders)
